--- a/Project ARIA/Project ARIA.vcxproj.filters
+++ b/Project ARIA/Project ARIA.vcxproj.filters
@@ -24,19 +24,19 @@
     <ClCompile Include="src\world\world.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Protozoa\rendering.cpp">
+    <ClCompile Include="src\Protozoa\extension\rendering.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Protozoa\physics.cpp">
+    <ClCompile Include="src\Protozoa\extension\physics.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\builder\builder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Protozoa\init.cpp">
+    <ClCompile Include="src\Protozoa\extension\init.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Protozoa\debug.cpp">
+    <ClCompile Include="src\Protozoa\extension\debug.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -56,7 +56,7 @@
     <ClInclude Include="src\Utils\Random.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Utils\font_renderer.hpp">
+    <ClInclude Include="src\Utils\fonts\font_renderer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Utils\fps_manager.h">
@@ -77,7 +77,7 @@
     <ClInclude Include="src\Utils\utility_SFML.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Utils\Camera.hpp">
+    <ClInclude Include="src\Utils\UI\Camera.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Utils\Circle.h">
@@ -92,19 +92,34 @@
     <ClInclude Include="src\Protozoa\cell.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Utils\slider.h">
+    <ClInclude Include="src\Utils\UI\slider.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Utils\button.h">
+    <ClInclude Include="src\Utils\UI\button.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Utils\line_graph.h">
+    <ClInclude Include="src\Utils\UI\line_graph.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\food\food.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\food\food_manager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Utils\NeuralNetworks\GeneticNeuralNetwork.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Utils\NeuralNetworks\NeuralNetworkUI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Utils\NeuralNetworks\NaturalSelection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Utils\UI\text_box.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Utils\round_rect.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -114,5 +129,6 @@
     <Font Include="src\Utils\fonts\Roboto-Medium.ttf" />
     <Font Include="src\Utils\fonts\Roboto-MediumItalic.ttf" />
     <Font Include="src\Utils\fonts\Roboto-Regular.ttf" />
+    <Font Include="src\Utils\fonts\Teko.ttf" />
   </ItemGroup>
 </Project>
