--- a/Project ARIA/Project ARIA.vcxproj
+++ b/Project ARIA/Project ARIA.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Protozoa\extension\debug.cpp" />
     <ClCompile Include="src\Protozoa\extension\init.cpp" />
+    <ClCompile Include="src\Protozoa\extension\organic.cpp" />
     <ClCompile Include="src\Protozoa\extension\physics.cpp" />
     <ClCompile Include="src\Protozoa\extension\rendering.cpp" />
     <ClCompile Include="src\simulation\simulation.cpp" />
