Cleaned up the gene class - it was a mss

--- a/Project ARIA/Project ARIA.vcxproj
+++ b/Project ARIA/Project ARIA.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="src\Protozoa\spring.h" />
     <ClInclude Include="src\settings.h" />
     <ClInclude Include="src\simulation\simulation.h" />
+    <ClInclude Include="src\Utils\buffer_renderer.h" />
     <ClInclude Include="src\Utils\font_renderer.hpp" />
     <ClInclude Include="src\Utils\optimised_vector.h" />
     <ClInclude Include="src\Utils\UI\text_box.h" />
