--- a/Project ARIA/Project ARIA.vcxproj
+++ b/Project ARIA/Project ARIA.vcxproj
@@ -152,11 +152,13 @@
     <ClInclude Include="src\Protozoa\spring.h" />
     <ClInclude Include="src\settings.h" />
     <ClInclude Include="src\simulation\simulation.h" />
-    <ClInclude Include="src\Utils\buffer_renderer.h" />
-    <ClInclude Include="src\Utils\font_renderer.hpp" />
+    <ClInclude Include="src\Utils\Graphics\buffer_renderer.h" />
+    <ClInclude Include="src\Utils\Graphics\font_renderer.hpp" />
+    <ClInclude Include="src\Utils\Graphics\SFML_Grid.h" />
+    <ClInclude Include="src\Utils\Graphics\spatial_hash_grid.h" />
     <ClInclude Include="src\Utils\UI\text_box.h" />
     <ClInclude Include="src\Utils\UI\button.h" />
-    <ClInclude Include="src\Utils\Circle.h" />
+    <ClInclude Include="src\Utils\Graphics\Circle.h" />
     <ClInclude Include="src\Utils\fonts\font_renderer.hpp" />
     <ClInclude Include="src\Utils\fps_manager.h" />
     <ClInclude Include="src\Utils\NeuralNetworks\GeneticNeuralNetwork.h" />
