--- a/Project ARIA/Project ARIA.vcxproj
+++ b/Project ARIA/Project ARIA.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="src\Utils\Graphics\buffer_renderer.h" />
     <ClInclude Include="src\Utils\Graphics\font_renderer.hpp" />
     <ClInclude Include="src\Utils\Graphics\SFML_Grid.h" />
+    <ClInclude Include="src\Utils\Graphics\simple_spatial_grid.h" />
     <ClInclude Include="src\Utils\Graphics\spatial_hash_grid.h" />
     <ClInclude Include="src\Utils\thread_pool.h" />
     <ClInclude Include="src\Utils\UI\text_box.h" />
