--- a/Project ARIA/Project ARIA.vcxproj
+++ b/Project ARIA/Project ARIA.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="src\builder\builder.h" />
     <ClInclude Include="src\food_manager.h" />
     <ClInclude Include="src\Protozoa\cell.h" />
+    <ClInclude Include="src\Protozoa\genome.h" />
     <ClInclude Include="src\Protozoa\Protozoa.h" />
     <ClInclude Include="src\Protozoa\spring.h" />
     <ClInclude Include="src\settings.h" />
@@ -182,6 +183,16 @@
     <Font Include="media\fonts\Roboto-MediumItalic.ttf" />
     <Font Include="media\fonts\Roboto-Regular.ttf" />
     <Font Include="media\fonts\Teko.ttf" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="media\readme_images\Evolution Run timestep 10,000.png" />
+    <Image Include="media\readme_images\Evolution Run timestep 100,000.png" />
+    <Image Include="media\readme_images\Evolution Run timestep 40,000.png" />
+    <Image Include="media\readme_images\Zoom in of large organism 1.png" />
+    <Image Include="media\readme_images\Zoom in of large organism 2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
