--- a/Project ARIA/Project ARIA.vcxproj.filters
+++ b/Project ARIA/Project ARIA.vcxproj.filters
@@ -128,6 +128,9 @@
     <ClInclude Include="src\Utils\Graphics\simple_spatial_grid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Protozoa\genome.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Font Include="media\fonts\Calibri.ttf" />
@@ -136,5 +139,25 @@
     <Font Include="media\fonts\Roboto-MediumItalic.ttf" />
     <Font Include="media\fonts\Roboto-Regular.ttf" />
     <Font Include="media\fonts\Teko.ttf" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="media\readme_images\Evolution Run timestep 10,000.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="media\readme_images\Evolution Run timestep 40,000.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="media\readme_images\Evolution Run timestep 100,000.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="media\readme_images\Zoom in of large organism 1.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="media\readme_images\Zoom in of large organism 2.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
   </ItemGroup>
 </Project>
