fixed readme bugs

--- a/Project ARIA/Project ARIA.vcxproj
+++ b/Project ARIA/Project ARIA.vcxproj
@@ -185,9 +185,9 @@
     <Font Include="media\fonts\Teko.ttf" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="media\readme_images\Evolution Run timestep 10,000.png" />
-    <Image Include="media\readme_images\Evolution Run timestep 100,000.png" />
-    <Image Include="media\readme_images\Evolution Run timestep 40,000.png" />
+    <Image Include="media\readme_images\Evolution-Run-timestep-10,000.png" />
+    <Image Include="media\readme_images\Evolution-Run-timestep-100,000.png" />
+    <Image Include="media\readme_images\Evolution-Run-timestep-40,000.png" />
     <Image Include="media\readme_images\Zoom in of large organism 1.png" />
     <Image Include="media\readme_images\Zoom in of large organism 2.png" />
   </ItemGroup>
