--- a/Project ARIA/Project ARIA.vcxproj.filters
+++ b/Project ARIA/Project ARIA.vcxproj.filters
@@ -141,13 +141,13 @@
     <Font Include="media\fonts\Teko.ttf" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="media\readme_images\Evolution Run timestep 10,000.png">
+    <Image Include="media\readme_images\Evolution-Run-timestep-10,000.png">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="media\readme_images\Evolution Run timestep 40,000.png">
+    <Image Include="media\readme_images\Evolution-Run-timestep-40,000.png">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="media\readme_images\Evolution Run timestep 100,000.png">
+    <Image Include="media\readme_images\Evolution-Run-timestep-100,000.png">
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="media\readme_images\Zoom in of large organism 1.png">
